# cellular-automaton-sandbox

./: .gitignore  GUIDE.md  Makefile  README.md  game_of_life.py  pyproject.toml
.ralph/: round-002-thinker.json  round-002-worker.json  round-003-thinker.json  round-003-worker.json  round-004-thinker.json  round-004-worker.json  round-005-thinker.json  round-005-worker.json  round-006-thinker.json  round-006-worker.json  round-007-thinker.json  round-007-worker.json  round-011-thinker.json  round-011-worker.json  round-015-thinker.json  round-015-worker.json  round-020-thinker.json  round-020-worker.json  round-021-thinker.json  round-021-worker.json  round-022-thinker.json  round-022-worker.json  round-023-thinker.json  round-023-worker.json  round-025-thinker.json  round-025-worker.json  round-027-thinker.json  round-027-worker.json  round-028-thinker.json  round-028-worker.json  round-029-thinker.json  round-029-worker.json  round-030-thinker.json  round-030-worker.json  round-032-thinker.json  round-032-worker.json  round-035-thinker.json  round-035-worker.json  round-036-thinker.json  round-036-worker.json  (+6 more)
